@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -53,6 +53,10 @@ import sun.security.x509.NetscapeCertTypeExtension;
  * are relaxed compared to standard code signing checks in order to
  * allow these certificates to pass.
  *
+ * <li>Plugin code signing. WebStart and Plugin require their own variant
+ * which is equivalent to VAR_CODE_SIGNING with additional checks for
+ * compatibility/special cases. See also PKIXValidator.
+ *
  * <li>TSA Server (see RFC 3161, section 2.3).
  *
  * </ul>
@@ -105,7 +109,6 @@ class EndEntityChecker {
 
     // bit numbers in the key usage extension
     private static final int KU_SIGNATURE = 0;
-    private static final int KU_NON_REPUDIATION = 1;
     private static final int KU_KEY_ENCIPHERMENT = 2;
     private static final int KU_KEY_AGREEMENT = 4;
 
@@ -116,7 +119,7 @@ class EndEntityChecker {
 
     // TLS key exchange algorithms requiring keyEncipherment key usage
     private static final Collection<String> KU_SERVER_ENCRYPTION =
-        List.of("RSA");
+        Arrays.asList("RSA");
 
     // TLS key exchange algorithms requiring keyAgreement key usage
     private static final Collection<String> KU_SERVER_KEY_AGREEMENT =
@@ -152,6 +155,8 @@ class EndEntityChecker {
         } else if (variant.equals(Validator.VAR_CODE_SIGNING)) {
             checkCodeSigning(chain[0], exts);
         } else if (variant.equals(Validator.VAR_JCE_SIGNING)) {
+            checkCodeSigning(chain[0], exts);
+        } else if (variant.equals(Validator.VAR_PLUGIN_CODE_SIGNING)) {
             checkCodeSigning(chain[0], exts);
         } else if (variant.equals(Validator.VAR_TSA_SERVER)) {
             checkTSAServer(chain[0], exts);
@@ -220,8 +225,10 @@ class EndEntityChecker {
     /**
      * Utility method checking if bit 'bit' is set in this certificates
      * key usage extension.
+     * @throws CertificateException if not
      */
-    private boolean checkKeyUsage(X509Certificate cert, int bit) {
+    private boolean checkKeyUsage(X509Certificate cert, int bit)
+            throws CertificateException {
         boolean[] keyUsage = cert.getKeyUsage();
         if (keyUsage == null) {
             return true;
@@ -236,13 +243,13 @@ class EndEntityChecker {
      */
     private void checkTLSClient(X509Certificate cert, Set<String> exts)
             throws CertificateException {
-        if (!checkKeyUsage(cert, KU_SIGNATURE)) {
+        if (checkKeyUsage(cert, KU_SIGNATURE) == false) {
             throw new ValidatorException
                 ("KeyUsage does not allow digital signatures",
                 ValidatorException.T_EE_EXTENSIONS, cert);
         }
 
-        if (!checkEKU(cert, exts, OID_EKU_TLS_CLIENT)) {
+        if (checkEKU(cert, exts, OID_EKU_TLS_CLIENT) == false) {
             throw new ValidatorException("Extended key usage does not "
                 + "permit use for TLS client authentication",
                 ValidatorException.T_EE_EXTENSIONS, cert);
@@ -269,19 +276,19 @@ class EndEntityChecker {
     private void checkTLSServer(X509Certificate cert, String parameter,
             Set<String> exts) throws CertificateException {
         if (KU_SERVER_ENCRYPTION.contains(parameter)) {
-            if (!checkKeyUsage(cert, KU_KEY_ENCIPHERMENT)) {
+            if (checkKeyUsage(cert, KU_KEY_ENCIPHERMENT) == false) {
                 throw new ValidatorException
                         ("KeyUsage does not allow key encipherment",
                         ValidatorException.T_EE_EXTENSIONS, cert);
             }
         } else if (KU_SERVER_SIGNATURE.contains(parameter)) {
-            if (!checkKeyUsage(cert, KU_SIGNATURE)) {
+            if (checkKeyUsage(cert, KU_SIGNATURE) == false) {
                 throw new ValidatorException
                         ("KeyUsage does not allow digital signatures",
                         ValidatorException.T_EE_EXTENSIONS, cert);
             }
         } else if (KU_SERVER_KEY_AGREEMENT.contains(parameter)) {
-            if (!checkKeyUsage(cert, KU_KEY_AGREEMENT)) {
+            if (checkKeyUsage(cert, KU_KEY_AGREEMENT) == false) {
                 throw new ValidatorException
                         ("KeyUsage does not allow key agreement",
                         ValidatorException.T_EE_EXTENSIONS, cert);
@@ -290,11 +297,11 @@ class EndEntityChecker {
             throw new CertificateException("Unknown authType: " + parameter);
         }
 
-        if (!checkEKU(cert, exts, OID_EKU_TLS_SERVER)) {
+        if (checkEKU(cert, exts, OID_EKU_TLS_SERVER) == false) {
             // check for equivalent but now obsolete Server-Gated-Cryptography
             // (aka Step-Up, 128 bit) EKU OIDs
-            if ((!checkEKU(cert, exts, OID_EKU_MS_SGC)) &&
-                (!checkEKU(cert, exts, OID_EKU_NS_SGC))) {
+            if ((checkEKU(cert, exts, OID_EKU_MS_SGC) == false) &&
+                (checkEKU(cert, exts, OID_EKU_NS_SGC) == false)) {
                 throw new ValidatorException
                     ("Extended key usage does not permit use for TLS "
                     + "server authentication",
@@ -320,13 +327,13 @@ class EndEntityChecker {
      */
     private void checkCodeSigning(X509Certificate cert, Set<String> exts)
             throws CertificateException {
-        if (!checkKeyUsage(cert, KU_SIGNATURE)) {
+        if (checkKeyUsage(cert, KU_SIGNATURE) == false) {
             throw new ValidatorException
                 ("KeyUsage does not allow digital signatures",
                 ValidatorException.T_EE_EXTENSIONS, cert);
         }
 
-        if (!checkEKU(cert, exts, OID_EKU_CODE_SIGNING)) {
+        if (checkEKU(cert, exts, OID_EKU_CODE_SIGNING) == false) {
             throw new ValidatorException
                 ("Extended key usage does not permit use for code signing",
                 ValidatorException.T_EE_EXTENSIONS, cert);
@@ -334,7 +341,7 @@ class EndEntityChecker {
 
         // do not check Netscape cert type for JCE code signing checks
         // (some certs were issued with incorrect extensions)
-        if (!variant.equals(Validator.VAR_JCE_SIGNING)) {
+        if (variant.equals(Validator.VAR_JCE_SIGNING) == false) {
             if (!SimpleValidator.getNetscapeCertTypeBit(cert, NSCT_CODE_SIGNING)) {
                 throw new ValidatorException
                     ("Netscape cert type does not permit use for code signing",
@@ -355,11 +362,9 @@ class EndEntityChecker {
      */
     private void checkTSAServer(X509Certificate cert, Set<String> exts)
             throws CertificateException {
-        // KU and EKU should be consistent
-        if (!checkKeyUsage(cert, KU_SIGNATURE)
-                && !checkKeyUsage(cert, KU_NON_REPUDIATION)) {
+        if (checkKeyUsage(cert, KU_SIGNATURE) == false) {
             throw new ValidatorException
-                ("KeyUsage does not allow digital signatures or non repudiation",
+                ("KeyUsage does not allow digital signatures",
                 ValidatorException.T_EE_EXTENSIONS, cert);
         }
 
@@ -370,7 +375,7 @@ class EndEntityChecker {
                 ValidatorException.T_EE_EXTENSIONS, cert);
         }
 
-        if (!checkEKU(cert, exts, OID_EKU_TIME_STAMPING)) {
+        if (checkEKU(cert, exts, OID_EKU_TIME_STAMPING) == false) {
             throw new ValidatorException
                 ("Extended key usage does not permit use for TSA server",
                 ValidatorException.T_EE_EXTENSIONS, cert);
