@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,6 +26,7 @@
 package jdk.javadoc.internal.doclets.formats.html;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -59,6 +60,11 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocFileIOException;
  * Class to generate file for each module contents in the right-hand frame. This will list all the
  * required modules, packages and service types for the module. A click on any of the links will update
  * the frame with the clicked element page.
+ *
+ *  <p><b>This is NOT part of any supported API.
+ *  If you write code that depends on this, you do so at your own risk.
+ *  This code and its internal interfaces are subject to change or
+ *  deletion without notice.</b>
  */
 public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryWriter {
 
@@ -166,20 +172,26 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         computeModulesData();
     }
 
+    /**
+     * Get the module header.
+     *
+     * @param heading the heading for the section
+     */
     @Override
     public Content getModuleHeader(String heading) {
-        HtmlTree body = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
-        var div = HtmlTree.DIV(HtmlStyle.header);
+        HtmlTree bodyTree = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
+        HtmlTree div = new HtmlTree(TagName.DIV);
+        div.setStyle(HtmlStyle.header);
         Content moduleHead = new ContentBuilder();
         moduleHead.add(mdle.isOpen() && (configuration.docEnv.getModuleMode() == ModuleMode.ALL)
                 ? contents.openModuleLabel : contents.moduleLabel);
         moduleHead.add(" ").add(heading);
-        var tHeading = HtmlTree.HEADING_TITLE(Headings.PAGE_TITLE_HEADING,
+        Content tHeading = HtmlTree.HEADING_TITLE(Headings.PAGE_TITLE_HEADING,
                 HtmlStyle.title, moduleHead);
         div.add(tHeading);
         bodyContents.setHeader(getHeader(PageMode.MODULE, mdle))
                 .addMainContent(div);
-        return body;
+        return bodyTree;
     }
 
     @Override
@@ -197,19 +209,30 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 ));
     }
 
+    /**
+     * Get the content header.
+     */
     @Override
     public Content getContentHeader() {
         return new ContentBuilder();
     }
 
+    /**
+     * Get the summary section header.
+     */
     @Override
     public Content getSummariesList() {
-        return HtmlTree.UL(HtmlStyle.summaryList);
+        return new HtmlTree(TagName.UL).setStyle(HtmlStyle.summaryList);
     }
 
+    /**
+     * Get the summary tree.
+     *
+     * @param summaryContentTree the content tree to be added to the summary tree.
+     */
     @Override
-    public Content getSummary(Content source) {
-        return HtmlTree.SECTION(HtmlStyle.summary, source);
+    public Content getSummaryTree(Content summaryContentTree) {
+        return HtmlTree.SECTION(HtmlStyle.summary, summaryContentTree);
     }
 
     /**
@@ -242,11 +265,11 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         });
 
         // Get all packages if module is open or if displaying concealed modules
-        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Set.of())) {
+        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Collections.emptySet())) {
             if (shouldDocument(pkg) && (mdle.isOpen() || moduleMode == ModuleMode.ALL)) {
                 PackageEntry e = new PackageEntry();
                 if (mdle.isOpen()) {
-                    e.openedTo = Set.of();
+                    e.openedTo = Collections.emptySet();
                 }
                 packages.put(pkg, e);
             }
@@ -307,7 +330,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             }
             SortedSet<PackageElement> openPackages = new TreeSet<>(utils.comparators.makePackageComparator());
             if (module.isOpen()) {
-                openPackages.addAll(utils.getModulePackageMap().getOrDefault(module, Set.of()));
+                openPackages.addAll(utils.getModulePackageMap().getOrDefault(module, Collections.emptySet()));
             } else {
                 ElementFilter.opensIn(module.getDirectives()).forEach(directive -> {
                     PackageElement pkg = directive.getPackage();
@@ -346,14 +369,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         utils.getProvidesTrees(mdle).forEach(tree -> {
             TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                providesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
+                providesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(tree), false, true));
             }
         });
         // Generate the map of all services listed using @uses, and the description.
         utils.getUsesTrees(mdle).forEach(tree -> {
             TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                usesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
+                usesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(tree), false, true));
             }
         });
     }
@@ -412,12 +435,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      *
      * @param startMarker the marker comment
      * @param heading the heading for the section
-     * @param target the content to which the information is added
+     * @param htmltree the content tree to which the information is added
      */
     public void addSummaryHeader(Content startMarker, Content heading,
-            Content target) {
-        target.add(startMarker);
-        target.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
+            Content htmltree) {
+        htmltree.add(startMarker);
+        htmltree.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
     }
 
     /**
@@ -454,7 +477,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             TableHeader requiresTableHeader =
                     new TableHeader(contents.modifierLabel, contents.moduleLabel,
                             contents.descriptionLabel);
-            var section = HtmlTree.SECTION(HtmlStyle.modulesSummary)
+            HtmlTree section = HtmlTree.SECTION(HtmlStyle.modulesSummary)
                     .setId(HtmlIds.MODULES);
             addSummaryHeader(MarkerComments.START_OF_MODULES_SUMMARY, contents.navModules, section);
             if (display(requires)) {
@@ -496,7 +519,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     public void addPackagesSummary(Content summariesList) {
         if (display(packages)
                 || display(indirectPackages) || display(indirectOpenPackages)) {
-            var section = HtmlTree.SECTION(HtmlStyle.packagesSummary)
+            HtmlTree section = HtmlTree.SECTION(HtmlStyle.packagesSummary)
                     .setId(HtmlIds.PACKAGES);
             addSummaryHeader(MarkerComments.START_OF_PACKAGES_SUMMARY, contents.navPackages, section);
             if (display(packages)) {
@@ -603,6 +626,9 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         }
 
         li.add(table);
+        if (table.needsScript()) {
+            mainBodyScript.append(table.getScript());
+        }
     }
 
     private boolean isExported(Element e) {
@@ -666,7 +692,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         boolean haveProvides = displayServices(provides.keySet(), providesTrees);
 
         if (haveProvides || haveUses) {
-            var section = HtmlTree.SECTION(HtmlStyle.servicesSummary)
+            HtmlTree section = HtmlTree.SECTION(HtmlStyle.servicesSummary)
                     .setId(HtmlIds.SERVICES);
             addSummaryHeader(MarkerComments.START_OF_SERVICES_SUMMARY, contents.navServices, section);
             TableHeader usesProvidesTableHeader =
@@ -737,19 +763,17 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             Content desc = new ContentBuilder();
             if (display(providesTrees)) {
                 description = providesTrees.get(srv);
-                if (description != null && !description.isEmpty()) {
-                    desc.add(HtmlTree.DIV(HtmlStyle.block, description));
-                } else {
-                    addSummaryComment(srv, desc);
-                }
+                desc.add((description != null && !description.isEmpty())
+                        ? HtmlTree.DIV(HtmlStyle.block, description)
+                        : Entity.NO_BREAK_SPACE);
             } else {
                 desc.add(Entity.NO_BREAK_SPACE);
-            }
+                }
             // Only display the implementation details in the "all" mode.
             if (moduleMode == ModuleMode.ALL && !implSet.isEmpty()) {
                 desc.add(new HtmlTree(TagName.BR));
                 desc.add("(");
-                var implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
+                HtmlTree implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
                 desc.add(implSpan);
                 desc.add(Entity.NO_BREAK_SPACE);
                 String sep = "";
@@ -767,14 +791,15 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     /**
      * Add the module deprecation information to the documentation tree.
      *
-     * @param div the content to which the deprecation information will be added
+     * @param div the content tree to which the deprecation information will be added
      */
     public void addDeprecationInfo(Content div) {
         List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(mdle);
         if (utils.isDeprecated(mdle)) {
             CommentHelper ch = utils.getCommentHelper(mdle);
-            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
-            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
+            HtmlTree deprDiv = new HtmlTree(TagName.DIV);
+            deprDiv.setStyle(HtmlStyle.deprecationBlock);
+            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
                 List<? extends DocTree> commentTags = ch.getDescription(deprs.get(0));
@@ -787,28 +812,28 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     }
 
     @Override
-    public void addModuleDescription(Content moduleContent) {
-        addPreviewInfo(mdle, moduleContent);
+    public void addModuleDescription(Content moduleContentTree) {
+        addPreviewInfo(mdle, moduleContentTree);
         if (!utils.getFullBody(mdle).isEmpty()) {
-            var tree = HtmlTree.SECTION(HtmlStyle.moduleDescription)
+            HtmlTree tree = HtmlTree.SECTION(HtmlStyle.moduleDescription)
                     .setId(HtmlIds.MODULE_DESCRIPTION);
             addDeprecationInfo(tree);
             tree.add(MarkerComments.START_OF_MODULE_DESCRIPTION);
             addInlineComment(mdle, tree);
             addTagsInfo(mdle, tree);
-            moduleContent.add(tree);
+            moduleContentTree.add(tree);
         }
     }
 
     @Override
-    public void addModuleSignature(Content moduleContent) {
-        moduleContent.add(new HtmlTree(TagName.HR));
-        moduleContent.add(Signatures.getModuleSignature(mdle, this));
+    public void addModuleSignature(Content moduleContentTree) {
+        moduleContentTree.add(new HtmlTree(TagName.HR));
+        moduleContentTree.add(Signatures.getModuleSignature(mdle, this));
     }
 
     @Override
-    public void addModuleContent(Content source) {
-        bodyContents.addMainContent(source);
+    public void addModuleContent(Content moduleContentTree) {
+        bodyContents.addMainContent(moduleContentTree);
     }
 
     @Override
@@ -817,23 +842,24 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     }
 
     @Override
-    public void printDocument(Content content) throws DocFileIOException {
-        content.add(bodyContents);
+    public void printDocument(Content contentTree) throws DocFileIOException {
+        contentTree.add(bodyContents);
         printHtmlDocument(configuration.metakeywords.getMetaKeywordsForModule(mdle),
-                getDescription("declaration", mdle), getLocalStylesheets(mdle), content);
+                getDescription("declaration", mdle), getLocalStylesheets(mdle), contentTree);
     }
 
     /**
      * Add the module package deprecation information to the documentation tree.
      *
-     * @param li the content to which the deprecation information will be added
+     * @param li the content tree to which the deprecation information will be added
      * @param pkg the PackageDoc that is added
      */
     public void addPackageDeprecationInfo(Content li, PackageElement pkg) {
         if (utils.isDeprecated(pkg)) {
             List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(pkg);
-            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
-            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
+            HtmlTree deprDiv = new HtmlTree(TagName.DIV);
+            deprDiv.setStyle(HtmlStyle.deprecationBlock);
+            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
                 CommentHelper ch = utils.getCommentHelper(pkg);
