@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,6 +33,7 @@ import jdk.javadoc.internal.doclets.formats.html.markup.HtmlTree;
 import jdk.javadoc.internal.doclets.formats.html.markup.Text;
 import jdk.javadoc.internal.doclets.formats.html.markup.TagName;
 import jdk.javadoc.internal.doclets.toolkit.Content;
+import jdk.javadoc.internal.doclets.toolkit.util.DocletConstants;
 import jdk.javadoc.internal.doclets.toolkit.util.Utils;
 
 import javax.lang.model.element.Element;
@@ -45,6 +46,7 @@ import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.ElementKindVisitor14;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.SortedSet;
@@ -64,7 +66,7 @@ import static javax.lang.model.element.Modifier.SYNCHRONIZED;
 public class Signatures {
 
     public static Content getModuleSignature(ModuleElement mdle, ModuleWriterImpl moduleWriter) {
-        var signature = HtmlTree.DIV(HtmlStyle.moduleSignature);
+        Content signature = HtmlTree.DIV(HtmlStyle.moduleSignature);
         Content annotations = moduleWriter.getAnnotationInfo(mdle, true);
         if (!annotations.isEmpty()) {
             signature.add(HtmlTree.SPAN(HtmlStyle.annotations, annotations));
@@ -74,7 +76,7 @@ public class Signatures {
                 ? "open module" : "module";
         signature.add(label);
         signature.add(" ");
-        var nameSpan = HtmlTree.SPAN(HtmlStyle.elementName);
+        HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
         nameSpan.add(mdle.getQualifiedName().toString());
         signature.add(nameSpan);
         return signature;
@@ -84,13 +86,13 @@ public class Signatures {
         if (pkg.isUnnamed()) {
             return Text.EMPTY;
         }
-        var signature = HtmlTree.DIV(HtmlStyle.packageSignature);
+        Content signature = HtmlTree.DIV(HtmlStyle.packageSignature);
         Content annotations = pkgWriter.getAnnotationInfo(pkg, true);
         if (!annotations.isEmpty()) {
             signature.add(HtmlTree.SPAN(HtmlStyle.annotations, annotations));
         }
         signature.add("package ");
-        var nameSpan = HtmlTree.SPAN(HtmlStyle.elementName);
+        HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
         nameSpan.add(pkg.getQualifiedName().toString());
         signature.add(nameSpan);
         return signature;
@@ -104,7 +106,7 @@ public class Signatures {
         private final HtmlConfiguration configuration;
         private Content modifiers;
 
-        private static final Set<String> previewModifiers = Set.of();
+        private static final Set<String> previewModifiers = Collections.emptySet();
 
          TypeSignature(TypeElement typeElement, HtmlDocletWriter writer) {
              this.typeElement = typeElement;
@@ -127,7 +129,7 @@ public class Signatures {
             }
             content.add(HtmlTree.SPAN(HtmlStyle.modifiers, modifiers));
 
-            var nameSpan = HtmlTree.SPAN(HtmlStyle.elementName);
+            HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
             Content className = Text.of(utils.getSimpleName(typeElement));
             if (configuration.getOptions().linkSource()) {
                 writer.addSrcLink(typeElement, className, nameSpan);
@@ -144,12 +146,13 @@ public class Signatures {
             if (utils.isRecord(typeElement)) {
                 content.add(getRecordComponents());
             }
-            if (!utils.isAnnotationInterface(typeElement)) {
-                var extendsImplements = HtmlTree.SPAN(HtmlStyle.extendsImplements);
-                if (!utils.isPlainInterface(typeElement)) {
+            if (!utils.isAnnotationType(typeElement)) {
+                Content extendsImplements = new HtmlTree(TagName.SPAN)
+                        .setStyle(HtmlStyle.extendsImplements);
+                if (!utils.isInterface(typeElement)) {
                     TypeMirror superclass = utils.getFirstVisibleSuperClass(typeElement);
                     if (superclass != null) {
-                        content.add(Text.NL);
+                        content.add(DocletConstants.NL);
                         extendsImplements.add("extends ");
                         Content link = writer.getLink(new HtmlLinkInfo(configuration,
                                 HtmlLinkInfo.Kind.CLASS_SIGNATURE_PARENT_NAME,
@@ -166,8 +169,8 @@ public class Signatures {
                             continue;
                         }
                         if (isFirst) {
-                            extendsImplements.add(Text.NL);
-                            extendsImplements.add(utils.isPlainInterface(typeElement) ? "extends " : "implements ");
+                            extendsImplements.add(DocletConstants.NL);
+                            extendsImplements.add(utils.isInterface(typeElement) ? "extends " : "implements ");
                             isFirst = false;
                         } else {
                             extendsImplements.add(", ");
@@ -187,11 +190,11 @@ public class Signatures {
                     .filter(t -> utils.isLinkable(utils.asTypeElement(t)))
                     .toList();
             if (!linkablePermits.isEmpty()) {
-                var permitsSpan = HtmlTree.SPAN(HtmlStyle.permits);
+                Content permitsSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.permits);
                 boolean isFirst = true;
                 for (TypeMirror type : linkablePermits) {
                     if (isFirst) {
-                        content.add(Text.NL);
+                        content.add(DocletConstants.NL);
                         permitsSpan.add("permits");
                         permitsSpan.add(" ");
                         isFirst = false;
@@ -220,7 +223,7 @@ public class Signatures {
             for (RecordComponentElement e : typeElement.getRecordComponents()) {
                 content.add(sep);
                 writer.getAnnotations(e.getAnnotationMirrors(), false)
-                        .forEach(a -> content.add(a).add(" "));
+                        .forEach(a -> { content.add(a).add(" "); });
                 Content link = writer.getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.RECORD_COMPONENT,
                         e.asType()));
                 content.add(link);
@@ -376,7 +379,7 @@ public class Signatures {
         /**
          * Set the type parameters for an executable member.
          *
-         * @param typeParameters the type parameters to add.
+         * @param typeParameters the content tree containing the type parameters to add.
          * @return this instance
          */
         MemberSignature setTypeParameters(Content typeParameters) {
@@ -387,7 +390,7 @@ public class Signatures {
         /**
          * Set the return type for an executable member.
          *
-         * @param returnType the return type to add.
+         * @param returnType the content tree containing the return type to add.
          * @return this instance
          */
         MemberSignature setReturnType(Content returnType) {
@@ -409,33 +412,33 @@ public class Signatures {
         /**
          * Set the parameter information of an executable member.
          *
-         * @param content the parameter information.
+         * @param paramTree the content tree containing the parameter information.
          * @return this instance
          */
-        MemberSignature setParameters(Content content) {
-            this.parameters = content;
+        MemberSignature setParameters(Content paramTree) {
+            this.parameters = paramTree;
             return this;
         }
 
         /**
          * Set the exception information of an executable member.
          *
-         * @param content the exception information
+         * @param exceptionTree the content tree containing the exception information
          * @return this instance
          */
-        MemberSignature setExceptions(Content content) {
-            this.exceptions = content;
+        MemberSignature setExceptions(Content exceptionTree) {
+            this.exceptions = exceptionTree;
             return this;
         }
 
         /**
          * Set the annotation information of a member.
          *
-         * @param content the exception information
+         * @param annotationTree the content tree containing the exception information
          * @return this instance
          */
-        MemberSignature setAnnotations(Content content) {
-            this.annotations = content;
+        MemberSignature setAnnotations(Content annotationTree) {
+            this.annotations = annotationTree;
             return this;
         }
 
@@ -470,7 +473,7 @@ public class Signatures {
             }
 
             // Name
-            var nameSpan = HtmlTree.SPAN(HtmlStyle.elementName);
+            HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
             if (memberWriter.options.linkSource()) {
                 Content name = Text.of(memberWriter.name(element));
                 memberWriter.writer.addSrcLink(element, name, nameSpan);
@@ -488,12 +491,12 @@ public class Signatures {
         }
 
         /**
-         * Adds the modifiers for the member. The modifiers are ordered as specified
+         * Adds the modifier for the member. The modifiers are ordered as specified
          * by <em>The Java Language Specification</em>.
          *
-         * @param target the content to which the modifier information will be added
+         * @param htmlTree the content tree to which the modifier information will be added
          */
-        private void appendModifiers(Content target) {
+        private void appendModifiers(Content htmlTree) {
             Set<Modifier> set = new TreeSet<>(element.getModifiers());
 
             // remove the ones we really don't need
@@ -505,7 +508,7 @@ public class Signatures {
             // interface methods and fields.
             if ((utils.isField(element) || utils.isMethod(element))) {
                 Element te = element.getEnclosingElement();
-                if (utils.isInterface(te)) {
+                if (utils.isInterface(te) || utils.isAnnotationType(te)) {
                     // Remove the implicit abstract and public modifiers
                     if (utils.isMethod(element)) {
                         set.remove(ABSTRACT);
@@ -515,7 +518,7 @@ public class Signatures {
             }
             if (!set.isEmpty()) {
                 String mods = set.stream().map(Modifier::toString).collect(Collectors.joining(" "));
-                target.add(HtmlTree.SPAN(HtmlStyle.modifiers, Text.of(mods)))
+                htmlTree.add(HtmlTree.SPAN(HtmlStyle.modifiers, Text.of(mods)))
                         .add(Entity.NO_BREAK_SPACE);
             }
         }
@@ -523,30 +526,30 @@ public class Signatures {
         /**
          * Appends the type parameter information to the HTML tree.
          *
-         * @param target            the HTML tree
+         * @param htmlTree          the HTML tree
          * @param lastLineSeparator index of last line separator in the HTML tree
          * @return the new index of the last line separator
          */
-        private int appendTypeParameters(Content target, int lastLineSeparator) {
+        private int appendTypeParameters(Content htmlTree, int lastLineSeparator) {
             // Apply different wrapping strategies for type parameters
-            // depending on the combined length of type parameters and return type.
+            // depending of combined length of type parameters and return type.
             int typeParamLength = typeParameters.charCount();
 
             if (typeParamLength >= TYPE_PARAMS_MAX_INLINE_LENGTH) {
-                target.add(HtmlTree.SPAN(HtmlStyle.typeParametersLong, typeParameters));
+                htmlTree.add(HtmlTree.SPAN(HtmlStyle.typeParametersLong, typeParameters));
             } else {
-                target.add(HtmlTree.SPAN(HtmlStyle.typeParameters, typeParameters));
+                htmlTree.add(HtmlTree.SPAN(HtmlStyle.typeParameters, typeParameters));
             }
 
-            int lineLength = target.charCount() - lastLineSeparator;
+            int lineLength = htmlTree.charCount() - lastLineSeparator;
             int newLastLineSeparator = lastLineSeparator;
 
             // sum below includes length of modifiers plus type params added above
             if (lineLength + returnType.charCount() > RETURN_TYPE_MAX_LINE_LENGTH) {
-                target.add(Text.NL);
-                newLastLineSeparator = target.charCount();
+                htmlTree.add(DocletConstants.NL);
+                newLastLineSeparator = htmlTree.charCount();
             } else {
-                target.add(Entity.NO_BREAK_SPACE);
+                htmlTree.add(Entity.NO_BREAK_SPACE);
             }
 
             return newLastLineSeparator;
@@ -555,25 +558,25 @@ public class Signatures {
         /**
          * Appends the parameters and exceptions information to the HTML tree.
          *
-         * @param target            the HTML tree
+         * @param htmlTree          the HTML tree
          * @param lastLineSeparator the index of the last line separator in the HTML tree
          */
-        private void appendParametersAndExceptions(Content target, int lastLineSeparator) {
+        private void appendParametersAndExceptions(Content htmlTree, int lastLineSeparator) {
             // Record current position for indentation of exceptions
-            int indentSize = target.charCount() - lastLineSeparator;
+            int indentSize = htmlTree.charCount() - lastLineSeparator;
 
             if (parameters.charCount() == 2) {
                 // empty parameters are added without packing
-                target.add(parameters);
+                htmlTree.add(parameters);
             } else {
-                target.add(new HtmlTree(TagName.WBR))
+                htmlTree.add(new HtmlTree(TagName.WBR))
                         .add(HtmlTree.SPAN(HtmlStyle.parameters, parameters));
             }
 
             // Exceptions
             if (exceptions != null && !exceptions.isEmpty()) {
                 CharSequence indent = " ".repeat(Math.max(0, indentSize + 1 - 7));
-                target.add(Text.NL)
+                htmlTree.add(DocletConstants.NL)
                         .add(indent)
                         .add("throws ")
                         .add(HtmlTree.SPAN(HtmlStyle.exceptions, exceptions));
