@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,20 +30,12 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
-import java.time.Instant;
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.time.temporal.ChronoUnit;
-import java.time.temporal.TemporalUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Calendar;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.MissingResourceException;
 import java.util.Set;
 import java.util.StringTokenizer;
@@ -88,12 +80,6 @@ public abstract class BaseOptions {
      * Arguments for command-line option {@code -tag} and {@code -taglet}.
      */
     private final LinkedHashSet<List<String>> customTagStrs = new LinkedHashSet<>();
-
-    /**
-     * Argument for command-line option {@code --date}.
-     * {@code null} if option not given.
-     */
-    private ZonedDateTime date;
 
     /**
      * Argument for command-line option {@code -d}.
@@ -178,20 +164,6 @@ public abstract class BaseOptions {
      */
     // A list of pairs containing urls and package list
     private final List<Utils.Pair<String, String>> linkOfflineList = new ArrayList<>();
-
-    /**
-     * An enum of policies for handling modularity mismatches in external documentation.
-     */
-    public enum ModularityMismatchPolicy {
-        INFO,
-        WARN
-    }
-
-    /**
-     * Argument for command-line option {@code --link-modularity-mismatch}.
-     * Describes how to handle external documentation with non-matching modularity.
-     */
-    private ModularityMismatchPolicy linkModularityMismatch = ModularityMismatchPolicy.WARN;
 
     /**
      * Location of alternative platform link properties file.
@@ -297,8 +269,8 @@ public abstract class BaseOptions {
 
     /**
      * Value for command-line option {@code --override-methods summary}
-     * or {@code --override-methods detail}.
-     * Specifies whether those methods that override a supertype's method
+     * or  {@code --override-methods detail}.
+     * Specifies whether those methods that override a super-type's method
      * with no changes to the API contract should be summarized in the
      * footnote section.
      */
@@ -310,27 +282,16 @@ public abstract class BaseOptions {
      */
     private String tagletPath = null;
 
-    /**
-     * Argument for command-line option {@code --snippet-path}.
-     * The path for external snippets.
-     */
-    private String snippetPath = null;
-
     //</editor-fold>
 
     private final BaseConfiguration config;
-
-    /**
-     * The default amount of space between tab stops.
-     */
-    public static final int DEFAULT_TAB_STOP_LENGTH = 8;
 
     protected BaseOptions(BaseConfiguration config) {
         this.config = config;
 
         excludedDocFileDirs = new HashSet<>();
         excludedQualifiers = new HashSet<>();
-        sourceTabSize = DEFAULT_TAB_STOP_LENGTH;
+        sourceTabSize = DocletConstants.DEFAULT_TAB_STOP_LENGTH;
         groupPairs = new ArrayList<>(0);
     }
 
@@ -353,33 +314,6 @@ public abstract class BaseOptions {
                     public boolean process(String opt, List<String> args) {
                         destDirName = addTrailingFileSep(args.get(0));
                         return true;
-                    }
-                },
-
-                new XOption(resources, "--date", 1) {
-                    // Valid --date range: within ten years of now
-                    private static final ZonedDateTime now = ZonedDateTime.now();
-                    static final ZonedDateTime DATE_MIN = now.minusYears(10);
-                    static final ZonedDateTime DATE_MAX = now.plusYears(10);
-
-                    @Override
-                    public boolean process(String opt,  List<String> args) {
-                        if (noTimestamp) {
-                            messages.error("doclet.Option_conflict", "--date", "-notimestamp");
-                            return false;
-                        }
-                        String arg = args.get(0);
-                        try {
-                            date = ZonedDateTime.parse(arg, DateTimeFormatter.ISO_ZONED_DATE_TIME);
-                            if (date.isBefore(DATE_MIN) || date.isAfter(DATE_MAX)) {
-                                messages.error("doclet.Option_date_out_of_range", arg);
-                                return false;
-                            }
-                            return true;
-                        } catch (DateTimeParseException x) {
-                            messages.error("doclet.Option_date_not_valid", arg);
-                            return false;
-                        }
                     }
                 },
 
@@ -463,23 +397,6 @@ public abstract class BaseOptions {
                     }
                 },
 
-                new Option(resources, "--link-modularity-mismatch", 1) {
-                    @Override
-                    public boolean process(String opt, List<String> args) {
-                        String s = args.get(0);
-                        switch (s) {
-                            case "warn", "info" ->
-                                    linkModularityMismatch = ModularityMismatchPolicy.valueOf(s.toUpperCase(Locale.ROOT));
-                            default -> {
-                                reporter.print(ERROR, resources.getText(
-                                        "doclet.Option_invalid", s, "--link-modularity-mismatch"));
-                                return false;
-                            }
-                        }
-                        return true;
-                    }
-                },
-
                 new Option(resources, "--link-platform-properties", 1) {
                     @Override
                     public boolean process(String opt, List<String> args) {
@@ -516,10 +433,6 @@ public abstract class BaseOptions {
                     @Override
                     public boolean process(String opt, List<String> args) {
                         noTimestamp = true;
-                        if (date != null) {
-                            messages.error("doclet.Option_conflict", "--date", "-notimestamp");
-                            return false;
-                        }
                         return true;
                     }
                 },
@@ -545,13 +458,16 @@ public abstract class BaseOptions {
                     public boolean process(String opt,  List<String> args) {
                         String o = args.get(0);
                         switch (o) {
-                            case "summary" -> summarizeOverriddenMethods = true;
-                            case "detail"  -> summarizeOverriddenMethods = false;
-                            default -> {
+                            case "summary":
+                                summarizeOverriddenMethods = true;
+                                break;
+                            case "detail":
+                                summarizeOverriddenMethods = false;
+                                break;
+                            default:
                                 reporter.print(ERROR,
                                         resources.getText("doclet.Option_invalid",o, "--override-methods"));
                                 return false;
-                            }
                         }
                         return true;
                     }
@@ -602,7 +518,7 @@ public abstract class BaseOptions {
                         }
                         if (sourceTabSize <= 0) {
                             messages.warning("doclet.sourcetab_warning");
-                            sourceTabSize = DEFAULT_TAB_STOP_LENGTH;
+                            sourceTabSize = DocletConstants.DEFAULT_TAB_STOP_LENGTH;
                         }
                         return true;
                     }
@@ -634,14 +550,6 @@ public abstract class BaseOptions {
                     @Override
                     public boolean process(String opt, List<String> args) {
                         tagletPath = args.get(0);
-                        return true;
-                    }
-                },
-
-                new Option(resources, "--snippet-path", 1) {
-                    @Override
-                    public boolean process(String opt, List<String> args) {
-                        snippetPath = args.get(0);
                         return true;
                     }
                 },
@@ -789,13 +697,6 @@ public abstract class BaseOptions {
     }
 
     /**
-     * Argument for command-line option {@code --date}.
-     */
-    public ZonedDateTime date() {
-        return date;
-    }
-
-    /**
      * Argument for command-line option {@code -d}.
      * Destination directory name, in which doclet will generate the entire
      * documentation. Default is current directory.
@@ -913,14 +814,6 @@ public abstract class BaseOptions {
     }
 
     /**
-     * Argument for command-line option {@code --link-modularity-mismatch}.
-     * Describes how to handle external documentation with non-matching modularity.
-     */
-    public ModularityMismatchPolicy linkModularityMismatch() {
-        return linkModularityMismatch;
-    }
-
-    /**
      * Argument for command-line option {@code --link-platform-properties}.
      */
     String linkPlatformProperties() {
@@ -1032,7 +925,7 @@ public abstract class BaseOptions {
      * Arguments for command line option {@code --since}.
      */
     public List<String> since() {
-        return List.copyOf(since);
+        return Collections.unmodifiableList(since);
     }
 
     /**
@@ -1052,8 +945,8 @@ public abstract class BaseOptions {
 
     /**
      * Value for command-line option {@code --override-methods summary}
-     * or {@code --override-methods detail}.
-     * Specifies whether those methods that override a supertype's method
+     * or  {@code --override-methods detail}.
+     * Specifies whether those methods that override a super-type's method
      * with no changes to the API contract should be summarized in the
      * footnote section.
      */
@@ -1067,14 +960,6 @@ public abstract class BaseOptions {
      */
     public String tagletPath() {
         return tagletPath;
-    }
-
-    /**
-     * Argument for command-line option {@code --snippet-path}.
-     * The path for external snippets.
-     */
-    public String snippetPath() {
-        return snippetPath;
     }
 
     protected abstract static class Option implements Doclet.Option, Comparable<Option> {
