@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,6 +30,7 @@ import java.util.*;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
+import javax.lang.model.type.TypeMirror;
 
 import com.sun.source.doctree.DocTree;
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
@@ -37,70 +38,95 @@ import jdk.javadoc.internal.doclets.toolkit.taglets.InheritableTaglet;
 
 /**
  * Search for the requested documentation.  Inherit documentation if necessary.
+ *
+ *  <p><b>This is NOT part of any supported API.
+ *  If you write code that depends on this, you do so at your own risk.
+ *  This code and its internal interfaces are subject to change or
+ *  deletion without notice.</b>
  */
 public class DocFinder {
 
-    public record DocTreeInfo(DocTree docTree, Element element) { }
+    public static final class DocTreeInfo {
+        public final DocTree docTree;
+        public final Element element;
+
+        public DocTreeInfo() {
+            this.docTree = null;
+            this.element = null;
+        }
+
+        public DocTreeInfo(DocTree docTree, Element baseElement) {
+            this.docTree = docTree;
+            this.element = baseElement;
+        }
+
+        @Override
+        public String toString() {
+            return "DocTreeInfo{" + "docTree=" + docTree + ", element=" + element + '}';
+        }
+    }
 
     /**
      * The class that encapsulates the input.
      */
     public static class Input {
-
         /**
          * The element to search documentation from.
          */
         public Element element;
-
         /**
          * The taglet to search for documentation on behalf of. Null if we want
          * to search for overall documentation.
          */
-        public InheritableTaglet taglet;
+        public InheritableTaglet taglet = null;
 
         /**
          * The id of the tag to retrieve documentation for.
          */
-        public String tagId;
+        public String tagId = null;
 
         /**
          * The tag to retrieve documentation for.  This is only used for the
-         * {@code {@inheritDoc}} tag.
+         * inheritDoc tag.
          */
         public final DocTreeInfo docTreeInfo;
 
         /**
          * True if we only want to search for the first sentence.
          */
-        public boolean isFirstSentence;
+        public boolean isFirstSentence = false;
 
         /**
-         * True if we are looking for documentation to replace the {@code {@inheritDoc}} tag.
+         * True if we are looking for documentation to replace the inheritDocTag.
          */
-        public boolean isInheritDocTag;
+        public boolean isInheritDocTag = false;
 
         /**
          * Used to distinguish between type variable param tags and regular
          * param tags.
          */
-        public boolean isTypeVariableParamTag;
+        public boolean isTypeVariableParamTag = false;
 
         public final Utils utils;
 
-        public Input(Utils utils,
-                     Element element,
-                     InheritableTaglet taglet,
-                     String tagId) {
+        public Input(Utils utils, Element element, InheritableTaglet taglet, DocTreeInfo dtInfo,
+                boolean isFirstSentence, boolean isInheritDocTag) {
+            this.utils = utils;
+            this.element = element;
+            this.taglet = taglet;
+            this.isFirstSentence = isFirstSentence;
+            this.isInheritDocTag = isInheritDocTag;
+            this.docTreeInfo = dtInfo;
+        }
+
+        public Input(Utils utils, Element element, InheritableTaglet taglet, String tagId) {
             this(utils, element);
             this.taglet = taglet;
             this.tagId = tagId;
         }
 
-        public Input(Utils utils,
-                     Element element,
-                     InheritableTaglet taglet,
-                     String tagId,
-                     boolean isTypeVariableParamTag) {
+        public Input(Utils utils, Element element, InheritableTaglet taglet, String tagId,
+            boolean isTypeVariableParamTag) {
             this(utils, element);
             this.taglet = taglet;
             this.tagId = tagId;
@@ -113,35 +139,32 @@ public class DocFinder {
         }
 
         public Input(Utils utils, Element element) {
-            this.element = Objects.requireNonNull(element);
+            if (element == null)
+                throw new NullPointerException();
+            this.element = element;
             this.utils = utils;
-            this.docTreeInfo = new DocTreeInfo(null, null);
+            this.docTreeInfo = new DocTreeInfo();
         }
 
-        public Input(Utils utils,
-                     Element element,
-                     InheritableTaglet taglet,
-                     DocTreeInfo dtInfo,
-                     boolean isFirstSentence,
-                     boolean isInheritDocTag) {
-            this.utils = utils;
-            this.element = Objects.requireNonNull(element);
-            this.taglet = taglet;
+        public Input(Utils utils, Element element, boolean isFirstSentence) {
+            this(utils, element);
             this.isFirstSentence = isFirstSentence;
-            this.isInheritDocTag = isInheritDocTag;
-            this.docTreeInfo = dtInfo;
         }
 
-        private Input copy() {
-            var copy = new Input(utils, element, taglet, docTreeInfo,
-                    isFirstSentence, isInheritDocTag);
-            copy.tagId = tagId;
-            copy.isTypeVariableParamTag = isTypeVariableParamTag;
-            return copy;
+        public Input copy(Utils utils) {
+            if (this.element == null) {
+                throw new NullPointerException();
+            }
+            Input clone = new Input(utils, this.element, this.taglet, this.docTreeInfo,
+                    this.isFirstSentence, this.isInheritDocTag);
+            clone.tagId = this.tagId;
+            clone.isTypeVariableParamTag = this.isTypeVariableParamTag;
+            return clone;
         }
 
         /**
-         * For debugging purposes.
+         * For debugging purposes
+         * @return string representation
          */
         @Override
         public String toString() {
@@ -160,7 +183,6 @@ public class DocFinder {
      * The class that encapsulates the output.
      */
     public static class Output {
-
         /**
          * The tag that holds the documentation.  Null if documentation
          * is not held by a tag.
@@ -168,14 +190,14 @@ public class DocFinder {
         public DocTree holderTag;
 
         /**
-         * The element that holds the documentation.
+         * The Doc object that holds the documentation.
          */
         public Element holder;
 
         /**
          * The inherited documentation.
          */
-        public List<? extends DocTree> inlineTags = List.of();
+        public List<? extends DocTree> inlineTags = Collections.emptyList();
 
         /**
          * False if documentation could not be inherited.
@@ -183,16 +205,18 @@ public class DocFinder {
         public boolean isValidInheritDocTag = true;
 
         /**
-         * When automatically inheriting throws tags, you sometimes must inherit
-         * more than one tag.  For example, if a method declares that it throws
-         * IOException and the overridden method has {@code @throws} tags for IOException and
+         * When automatically inheriting throws tags, you sometime must inherit
+         * more than one tag.  For example if the element declares that it throws
+         * IOException and the overridden element has throws tags for IOException and
          * ZipException, both tags would be inherited because ZipException is a
-         * subclass of IOException.  This allows multiple tag inheritance.
+         * subclass of IOException.  This subclass of DocFinder.Output allows
+         * multiple tag inheritance.
          */
-        public final List<DocTree> tagList = new ArrayList<>();
+        public List<DocTree> tagList  = new ArrayList<>();
 
         /**
-         * For debugging purposes.
+         * Returns a string representation for debugging purposes
+         * @return string
          */
         @Override
         public String toString() {
@@ -207,7 +231,9 @@ public class DocFinder {
 
     /**
      * Search for the requested comments in the given element.  If it does not
-     * have comments, return the inherited comments if possible.
+     * have comments, return documentation from the overridden element if possible.
+     * If the overridden element does not exist or does not have documentation to
+     * inherit, search for documentation to inherit from implemented methods.
      *
      * @param input the input object used to perform the search.
      *
@@ -229,15 +255,14 @@ public class DocFinder {
             input.taglet.inherit(input, output);
         }
 
-        if (!output.inlineTags.isEmpty()) {
+        if (output.inlineTags != null && !output.inlineTags.isEmpty()) {
             return output;
         }
         output.isValidInheritDocTag = false;
-        Input inheritedSearchInput = input.copy();
+        Input inheritedSearchInput = input.copy(configuration.utils);
         inheritedSearchInput.isInheritDocTag = false;
         if (utils.isMethod(input.element)) {
-            ExecutableElement m = (ExecutableElement) input.element;
-            ExecutableElement overriddenMethod = utils.overriddenMethod(m);
+            ExecutableElement overriddenMethod = utils.overriddenMethod((ExecutableElement) input.element);
             if (overriddenMethod != null) {
                 inheritedSearchInput.element = overriddenMethod;
                 output = search(configuration, inheritedSearchInput);
@@ -246,11 +271,26 @@ public class DocFinder {
                     return output;
                 }
             }
+            //NOTE:  When we fix the bug where ClassDoc.interfaceTypes() does
+            //       not pass all implemented interfaces, we will use the
+            //       appropriate element here.
             TypeElement encl = utils.getEnclosingTypeElement(input.element);
             VisibleMemberTable vmt = configuration.getVisibleMemberTable(encl);
-            List<ExecutableElement> implementedMethods = vmt.getImplementedMethods(m);
+            List<ExecutableElement> implementedMethods =
+                    vmt.getImplementedMethods((ExecutableElement)input.element);
             for (ExecutableElement implementedMethod : implementedMethods) {
                 inheritedSearchInput.element = implementedMethod;
+                output = search(configuration, inheritedSearchInput);
+                output.isValidInheritDocTag = true;
+                if (!output.inlineTags.isEmpty()) {
+                    return output;
+                }
+            }
+        } else if (utils.isTypeElement(input.element)) {
+            TypeMirror t = ((TypeElement) input.element).getSuperclass();
+            Element superclass = utils.asTypeElement(t);
+            if (superclass != null) {
+                inheritedSearchInput.element = superclass;
                 output = search(configuration, inheritedSearchInput);
                 output.isValidInheritDocTag = true;
                 if (!output.inlineTags.isEmpty()) {
