@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,7 +43,6 @@ import javax.lang.model.util.SimpleElementVisitor14;
 import javax.lang.model.util.SimpleTypeVisitor14;
 import java.lang.ref.SoftReference;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.EnumSet;
@@ -64,18 +63,18 @@ import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
 /**
  * This class computes the main data structure for the doclet's
  * operations. Essentially, the implementation encapsulating the
- * javax.lang.model's view of what can be documented about a
+ * javax.lang.models view of what can be documented about a
  * type element's members.
  * <p>
  * The general operations are as follows:
  * <p>
- * Members: these are the members from j.l.m's view but
+ * Members: these are the members from jx.l.m's view but
  * are structured along the kinds of this class.
  * <p>
  * Extra Members: these are members enclosed in an undocumented
  * package-private type element, and may not be linkable (or documented),
  * however, the members of such a type element may be documented, as if
- * declared in the subtype, only if the enclosing type is not being
+ * declared in the sub type, only if the enclosing type is not being
  * documented by a filter such as -public, -protected, etc.
  * <p>
  * Visible Members: these are the members that are "visible"
@@ -88,7 +87,14 @@ import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
  * This table generates all the data structures it needs for each
  * type, as its own view, and will present some form of this to the
  * doclet as and when required to.
+ *
+ * <p><b>This is NOT part of any supported API.
+ * If you write code that depends on this, you do so at your own risk.
+ * This code and its internal interfaces are subject to change or
+ * deletion without notice.</b>
+ *
  */
+
 public class VisibleMemberTable {
 
     public enum Kind {
@@ -97,9 +103,8 @@ public class VisibleMemberTable {
         FIELDS,
         CONSTRUCTORS,
         METHODS,
-        ANNOTATION_TYPE_MEMBER,
-        ANNOTATION_TYPE_MEMBER_REQUIRED,
         ANNOTATION_TYPE_MEMBER_OPTIONAL,
+        ANNOTATION_TYPE_MEMBER_REQUIRED,
         PROPERTIES;
 
         private static final EnumSet<Kind> defaultSummarySet = EnumSet.of(
@@ -107,13 +112,11 @@ public class VisibleMemberTable {
         private static final EnumSet<Kind> enumSummarySet = EnumSet.of(
                 NESTED_CLASSES, ENUM_CONSTANTS, FIELDS, METHODS);
         private static final EnumSet<Kind> annotationSummarySet = EnumSet.of(
-                FIELDS, ANNOTATION_TYPE_MEMBER_REQUIRED, ANNOTATION_TYPE_MEMBER_OPTIONAL);
+                FIELDS, ANNOTATION_TYPE_MEMBER_OPTIONAL, ANNOTATION_TYPE_MEMBER_REQUIRED);
         private static final EnumSet<Kind> defaultDetailSet = EnumSet.of(
                 FIELDS, CONSTRUCTORS, METHODS);
         private static final EnumSet<Kind> enumDetailSet = EnumSet.of(
                 ENUM_CONSTANTS, FIELDS, METHODS);
-        private static final EnumSet<Kind> annotationDetailSet = EnumSet.of(
-                FIELDS, ANNOTATION_TYPE_MEMBER);
 
         /**
          * {@return the set of possible member kinds for the summaries section of a type element}
@@ -132,31 +135,29 @@ public class VisibleMemberTable {
          * @param kind the kind of type element being documented
          */
         public static Set<Kind> forDetailsOf(ElementKind kind) {
-            return switch (kind) {
-                case ANNOTATION_TYPE -> annotationDetailSet;
-                case ENUM -> enumDetailSet;
-                default -> defaultDetailSet;
-            };
+            return kind == ElementKind.ENUM
+                    ? enumDetailSet
+                    : defaultDetailSet;
         }
     }
 
-    private final TypeElement te;
-    private final TypeElement parent;
+    final TypeElement te;
+    final TypeElement parent;
 
-    private final BaseConfiguration config;
-    private final BaseOptions options;
-    private final Utils utils;
-    private final VisibleMemberCache mcache;
+    final BaseConfiguration config;
+    final BaseOptions options;
+    final Utils utils;
+    final VisibleMemberCache mcache;
 
     private final List<VisibleMemberTable> allSuperclasses;
     private final List<VisibleMemberTable> allSuperinterfaces;
     private final List<VisibleMemberTable> parents;
 
-    private Map<Kind, List<Element>> visibleMembers;
+    private Map<Kind, List<Element>> visibleMembers = null;
     private final Map<ExecutableElement, PropertyMembers> propertyMap = new HashMap<>();
 
     // Keeps track of method overrides
-    private final Map<ExecutableElement, OverriddenMethodInfo> overriddenMethodTable
+    Map<ExecutableElement, OverriddenMethodInfo> overriddenMethodTable
             = new LinkedHashMap<>();
 
     protected VisibleMemberTable(TypeElement typeElement, BaseConfiguration configuration,
@@ -172,7 +173,7 @@ public class VisibleMemberTable {
         parents = new ArrayList<>();
     }
 
-    private void ensureInitialized() {
+    private synchronized void ensureInitialized() {
         if (visibleMembers != null)
             return;
 
@@ -202,19 +203,19 @@ public class VisibleMemberTable {
      * a. The list may or may not contain simple overridden methods.
      * A simple overridden method is one that overrides a super method
      * with no specification changes as indicated by the existence of a
-     * sole {@code {@inheritDoc}} or devoid of any API comments.
+     * sole &commat;inheritDoc or devoid of any API comments.
      * <p>
      * b.The list may contain (extra) members, inherited by inaccessible
-     * supertypes, primarily package private types. These members are
-     * required to be documented in the subtype when the supertype is
+     * super types, primarily package private types. These members are
+     * required to be documented in the subtype when the super type is
      * not documented.
      *
      * @param kind the member kind
      * @return a list of all visible members
      */
-    public List<Element> getAllVisibleMembers(Kind kind) {
+    public List<? extends Element> getAllVisibleMembers(Kind kind) {
         ensureInitialized();
-        return visibleMembers.getOrDefault(kind, List.of());
+        return visibleMembers.getOrDefault(kind, Collections.emptyList());
     }
 
     /**
@@ -224,10 +225,10 @@ public class VisibleMemberTable {
      * @param p the predicate used to filter the output
      * @return a list of visible enclosed members
      */
-    public List<Element> getVisibleMembers(Kind kind, Predicate<Element> p) {
+    public List<? extends Element> getVisibleMembers(Kind kind, Predicate<Element> p) {
         ensureInitialized();
 
-        return visibleMembers.getOrDefault(kind, List.of()).stream()
+        return visibleMembers.getOrDefault(kind, Collections.emptyList()).stream()
                 .filter(p)
                 .toList();
     }
@@ -239,7 +240,7 @@ public class VisibleMemberTable {
      * @param kind the member kind
      * @return a list of visible enclosed members
      */
-    public List<Element> getVisibleMembers(Kind kind) {
+    public List<? extends Element> getVisibleMembers(Kind kind) {
         Predicate<Element> declaredAndLeafMembers = e -> {
             TypeElement encl = utils.getEnclosingTypeElement(e);
             return encl == te || utils.isUndocumentedEnclosure(encl);
@@ -254,7 +255,7 @@ public class VisibleMemberTable {
      *
      * @return a list of visible enclosed members in this type
      */
-    public List<Element> getMembers(Kind kind) {
+    public List<? extends Element> getMembers(Kind kind) {
         Predicate<Element> onlyLocallyDeclaredMembers = e -> utils.getEnclosingTypeElement(e) == te;
         return getVisibleMembers(kind, onlyLocallyDeclaredMembers);
     }
@@ -273,32 +274,34 @@ public class VisibleMemberTable {
         OverriddenMethodInfo found = overriddenMethodTable.get(e);
         if (found != null
                 && (found.simpleOverride || utils.isUndocumentedEnclosure(utils.getEnclosingTypeElement(e)))) {
-            return found.overriddenMethod;
+            return found.overridden;
         }
         return null;
     }
 
     /**
-     * {@return true if the specified method is NOT a simple override of some
-     * other method, otherwise false}
-     *
+     * Returns the simply overridden method.
      * @param e the method to check
+     * @return the overridden method or null
      */
-    public boolean isNotSimpleOverride(ExecutableElement e) {
+    public ExecutableElement getSimplyOverriddenMethod(ExecutableElement e) {
         ensureInitialized();
 
-        var info = overriddenMethodTable.get(e);
-        return info == null || !info.simpleOverride;
+        OverriddenMethodInfo found = overriddenMethodTable.get(e);
+        if (found != null && found.simpleOverride) {
+            return found.overridden;
+        }
+        return null;
     }
 
     /**
      * Returns a set of visible type elements in this type element's lineage.
      * <p>
-     * This method returns the supertypes in the inheritance
-     * order C, B, A, j.l.O. The superinterfaces however are
+     * This method returns the super-types in the inheritance
+     * order C, B, A, j.l.O. The super-interfaces however are
      * alpha sorted and appended to the resulting set.
      *
-     * @return the set of visible classes in this map
+     * @return the list of visible classes in this map.
      */
     public Set<TypeElement> getVisibleTypeElements() {
         ensureInitialized();
@@ -307,12 +310,12 @@ public class VisibleMemberTable {
         // Add this type element first.
         result.add(te);
 
-        // Add the superclasses.
+        // Add the super classes.
         allSuperclasses.stream()
                 .map(vmt -> vmt.te)
                 .forEach(result::add);
 
-        // ... and finally the sorted superinterfaces.
+        // ... and finally the sorted super interfaces.
         allSuperinterfaces.stream()
                 .map(vmt -> vmt.te)
                 .sorted(utils.comparators.makeGeneralPurposeComparator())
@@ -348,60 +351,41 @@ public class VisibleMemberTable {
     }
 
     /**
-     * Returns the field for a property identified by any of the methods
-     * for that property.
-     *
-     * @param ee the method
+     * Returns the property field associated with the property method.
+     * @param propertyMethod the identifying property method
      * @return the field or null if absent
      */
-    public VariableElement getPropertyField(ExecutableElement ee) {
+    public VariableElement getPropertyField(ExecutableElement propertyMethod) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(ee);
+        PropertyMembers pm =  propertyMap.get(propertyMethod);
         return pm == null ? null : pm.field;
     }
 
     /**
-     * Returns the getter method for a property identified by any of the methods
-     * for that property.
-     *
-     * @param ee the method
+     * Returns the getter method associated with the property method.
+     * @param propertyMethod the identifying property method
      * @return the getter or null if absent
      */
-    public ExecutableElement getPropertyGetter(ExecutableElement ee) {
+    public ExecutableElement getPropertyGetter(ExecutableElement propertyMethod) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(ee);
+        PropertyMembers pm =  propertyMap.get(propertyMethod);
         return pm == null ? null : pm.getter;
     }
 
     /**
-     * Returns the setter method for a property identified by any of the methods
-     * for that property.
-     *
-     * @param ee the method
+     * Returns the setter method associated with the property method.
+     * @param propertyMethod the identifying property method
      * @return the setter or null if absent
      */
-    public ExecutableElement getPropertySetter(ExecutableElement ee) {
+    public ExecutableElement getPropertySetter(ExecutableElement propertyMethod) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(ee);
+        PropertyMembers pm =  propertyMap.get(propertyMethod);
         return pm == null ? null : pm.setter;
     }
 
-    /**
-     * Returns the property method for a property identified by any of the methods
-     * for that property.
-     *
-     * @param ee the method
-     * @return the property method or null if absent
-     */
-    public ExecutableElement getPropertyMethod(ExecutableElement ee) {
-        ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(ee);
-        return pm == null ? null : pm.propertyMethod;
-    }
-
     private void computeParents() {
-        // suppress parents of annotation interfaces
-        if (utils.isAnnotationInterface(te)) {
+        // suppress parents of annotation types
+        if (utils.isAnnotationType(te)) {
             return;
         }
 
@@ -419,7 +403,7 @@ public class VisibleMemberTable {
             VisibleMemberTable vmt = mcache.getVisibleMemberTable(parent);
             allSuperclasses.add(vmt);
             allSuperclasses.addAll(vmt.getAllSuperclasses());
-            // Add direct superinterfaces of a superclass, if any.
+            // Add direct super interfaces of a super class, if any.
             allSuperinterfaces.addAll(vmt.getAllSuperinterfaces());
             parents.add(vmt);
         }
@@ -463,8 +447,7 @@ public class VisibleMemberTable {
     }
 
     private boolean mustDocument(Element e) {
-        // these checks are ordered in a particular way to avoid parsing unless absolutely necessary
-        return utils.shouldDocument(e) && !utils.hasHiddenTag(e);
+        return !utils.hasHiddenTag(e) && utils.shouldDocument(e);
     }
 
     private boolean allowInheritedMembers(Element e, Kind kind, LocalMemberTable lmt) {
@@ -520,11 +503,12 @@ public class VisibleMemberTable {
         Map<ExecutableElement, List<ExecutableElement>> overriddenByTable = new HashMap<>();
         for (VisibleMemberTable pvmt : parents) {
             // Merge the lineage overrides into local table
-            pvmt.overriddenMethodTable.forEach((method, methodInfo) -> {
-                if (!methodInfo.simpleOverride) { // consider only real overrides
-                    List<ExecutableElement> list = overriddenByTable.computeIfAbsent(methodInfo.overriddenMethod,
+            pvmt.overriddenMethodTable.entrySet().forEach(e -> {
+                OverriddenMethodInfo p = e.getValue();
+                if (!p.simpleOverride) { // consider only real overrides
+                    List<ExecutableElement> list = overriddenByTable.computeIfAbsent(p.overridden,
                             k -> new ArrayList<>());
-                    list.add(method);
+                    list.add(e.getKey());
                 }
             });
             inheritedMethods.addAll(pvmt.getAllVisibleMembers(Kind.METHODS));
@@ -536,7 +520,7 @@ public class VisibleMemberTable {
         // c. are hidden in the type being considered
         // see allowInheritedMethod, which performs the above actions
         // nb. This statement has side effects that can initialize
-        // members of the overriddenMethodTable field, so it must be
+        // members of the overridenMethodTable field, so it must be
         // evaluated eagerly with toList().
         List<Element> inheritedMethodsList = inheritedMethods.stream()
                 .filter(e -> allowInheritedMethod((ExecutableElement) e, overriddenByTable, lmt))
@@ -557,7 +541,7 @@ public class VisibleMemberTable {
 
         // Merge the above list and stream, making sure the local methods precede the others
         // Final filtration of elements
-        List<Element> list = Stream.concat(localStream, inheritedMethodsList.stream())
+        List<Element> list = Stream.concat(localStream,inheritedMethodsList.stream())
                 .filter(this::mustDocument)
                 .toList();
 
@@ -567,11 +551,12 @@ public class VisibleMemberTable {
         for (VisibleMemberTable pvmt : parents) {
             overriddenMethodTable.putAll(pvmt.overriddenMethodTable);
         }
+        overriddenMethodTable = Collections.unmodifiableMap(overriddenMethodTable);
     }
 
     boolean isEnclosureInterface(Element e) {
         TypeElement enclosing = utils.getEnclosingTypeElement(e);
-        return utils.isPlainInterface(enclosing);
+        return utils.isInterface(enclosing);
     }
 
     boolean allowInheritedMethod(ExecutableElement inheritedMethod,
@@ -771,9 +756,8 @@ public class VisibleMemberTable {
                         addMember(e, Kind.FIELDS);
                         break;
                     case METHOD:
-                        if (utils.isAnnotationInterface(te)) {
+                        if (utils.isAnnotationType(te)) {
                             ExecutableElement ee = (ExecutableElement) e;
-                            addMember(e, Kind.ANNOTATION_TYPE_MEMBER);
                             addMember(e, ee.getDefaultValue() == null
                                     ? Kind.ANNOTATION_TYPE_MEMBER_REQUIRED
                                     : Kind.ANNOTATION_TYPE_MEMBER_OPTIONAL);
@@ -793,10 +777,10 @@ public class VisibleMemberTable {
             // Freeze the data structures
             for (Kind kind : Kind.values()) {
                 orderedMembers.computeIfPresent(kind, (k, v) -> Collections.unmodifiableList(v));
-                orderedMembers.computeIfAbsent(kind, t -> List.of());
+                orderedMembers.computeIfAbsent(kind, t -> Collections.emptyList());
 
                 memberMap.computeIfPresent(kind, (k, v) -> Collections.unmodifiableMap(v));
-                memberMap.computeIfAbsent(kind, t -> Map.of());
+                memberMap.computeIfAbsent(kind, t -> Collections.emptyMap());
             }
         }
 
@@ -833,28 +817,35 @@ public class VisibleMemberTable {
         }
 
         List<Element> getMembers(String key, Kind kind) {
-            Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, List.of());
+            Map <String, List<Element>> map = memberMap.get(kind);
+            return map.getOrDefault(key, Collections.emptyList());
         }
 
-        <T extends Element> List<T> getMembers(String key, Kind kind, Class<T> clazz) {
-            Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, List.of())
-                    .stream()
-                    .map(clazz::cast)
-                    .toList();
-        }
-
-        List<ExecutableElement> getPropertyMethods(String methodName, int argcount) {
+        List<Element> getPropertyMethods(String methodName, int argcount) {
             return getMembers(methodName + ":" + argcount, Kind.METHODS).stream()
                     .filter(m -> (utils.isPublic(m) || utils.isProtected(m)))
-                    .map(m -> (ExecutableElement) m)
                     .toList();
         }
     }
 
-    record PropertyMembers(ExecutableElement propertyMethod, VariableElement field,
-                           ExecutableElement getter, ExecutableElement setter) { }
+    /**
+     * The properties triad for a property method.
+     */
+    static class PropertyMembers {
+        final VariableElement field;
+        final ExecutableElement getter;
+        final ExecutableElement setter;
+
+        PropertyMembers(VariableElement field, ExecutableElement getter, ExecutableElement setter) {
+            this.field = field;
+            this.getter = getter;
+            this.setter = setter;
+        }
+
+        public String toString() {
+            return ("field: " + field + ", getter: " + getter + ", setter: " + setter);
+        }
+    }
 
     /*
      * JavaFX convention notes.
@@ -895,7 +886,7 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, List.of())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
                 .stream()
                 .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
                 .toList();
@@ -910,11 +901,11 @@ public class VisibleMemberTable {
         // Compute additional properties related sundries.
         for (ExecutableElement propertyMethod : propertyMethods) {
             String baseName = pUtils.getBaseName(propertyMethod);
-            List<VariableElement> flist = lmt.getMembers(baseName, Kind.FIELDS, VariableElement.class);
-            VariableElement field = flist.isEmpty() ? null : flist.get(0);
+            List<Element> flist = lmt.getMembers(baseName, Kind.FIELDS);
+            Element field = flist.isEmpty() ? null : flist.get(0);
 
-            ExecutableElement getter = null, setter = null;
-            List<ExecutableElement> found = lmt.getPropertyMethods(pUtils.getGetName(propertyMethod), 0);
+            Element getter = null, setter = null;
+            List<Element> found = lmt.getPropertyMethods(pUtils.getGetName(propertyMethod), 0);
             if (!found.isEmpty()) {
                 // Getters have zero params, no overloads! pick the first.
                 getter = found.get(0);
@@ -923,6 +914,7 @@ public class VisibleMemberTable {
                 // Check if isProperty methods are present ?
                 found = lmt.getPropertyMethods(pUtils.getIsName(propertyMethod), 0);
                 if (!found.isEmpty()) {
+                    String propertyTypeName = propertyMethod.getReturnType().toString();
                     // Check if the return type of property method matches an isProperty method.
                     if (pUtils.hasIsMethod(propertyMethod)) {
                         // Getters have zero params, no overloads!, pick the first.
@@ -932,22 +924,16 @@ public class VisibleMemberTable {
             }
             found = lmt.getPropertyMethods(pUtils.getSetName(propertyMethod), 1);
             if (found != null) {
-                for (ExecutableElement e : found) {
-                    if (pUtils.isValidSetterMethod(e)) {
+                for (Element e : found) {
+                    if (pUtils.isValidSetterMethod((ExecutableElement)e)) {
                         setter = e;
                         break;
                     }
                 }
             }
 
-            PropertyMembers pm = new PropertyMembers(propertyMethod, field, getter, setter);
-            propertyMap.put(propertyMethod, pm);
-            if (getter != null) {
-                propertyMap.put(getter, pm);
-            }
-            if (setter != null) {
-                propertyMap.put(setter, pm);
-            }
+            propertyMap.put(propertyMethod, new PropertyMembers((VariableElement)field,
+                    (ExecutableElement)getter, (ExecutableElement)setter));
 
             // Debugging purposes
             // System.out.println("te: " + te + ": " + utils.getEnclosingTypeElement(propertyMethod) +
@@ -958,24 +944,22 @@ public class VisibleMemberTable {
 
     // Future cleanups
 
-    private final Map<ExecutableElement, SoftReference<ImplementedMethods>>
-            implementMethodsFinders = new HashMap<>();
+    Map<ExecutableElement, SoftReference<ImplementedMethods>> implementMethodsFinders = new HashMap<>();
 
     private ImplementedMethods getImplementedMethodsFinder(ExecutableElement method) {
-        SoftReference<ImplementedMethods> ref = implementMethodsFinders.get(method);
-        ImplementedMethods imf = ref == null ? null : ref.get();
-        // imf does not exist or was gc'ed away?
-        if (imf == null) {
-            imf = new ImplementedMethods(method);
-            implementMethodsFinders.put(method, new SoftReference<>(imf));
+        SoftReference<ImplementedMethods> imf = implementMethodsFinders.get(method);
+        // IMF does not exist or referent was gc'ed away ?
+        if (imf == null || imf.get() == null) {
+            imf = new SoftReference<>(new ImplementedMethods(method));
+            implementMethodsFinders.put(method, imf);
         }
-        return imf;
+        return imf.get();
     }
 
     public List<ExecutableElement> getImplementedMethods(ExecutableElement method) {
         ImplementedMethods imf = getImplementedMethodsFinder(method);
         return imf.getImplementedMethods().stream()
-                .filter(this::isNotSimpleOverride)
+                .filter(m -> getSimplyOverriddenMethod(m) == null)
                 .toList();
     }
 
@@ -988,46 +972,112 @@ public class VisibleMemberTable {
     private class ImplementedMethods {
 
         private final Map<ExecutableElement, TypeMirror> interfaces = new HashMap<>();
-        private final LinkedHashSet<ExecutableElement> methods = new LinkedHashSet<>();
+        private final List<ExecutableElement> methlist = new ArrayList<>();
 
         public ImplementedMethods(ExecutableElement method) {
-            // ExecutableElement.getEnclosingElement() returns "the class or
-            // interface defining the executable", which has to be TypeElement
-            TypeElement typeElement = (TypeElement) method.getEnclosingElement();
+            TypeElement typeElement = utils.getEnclosingTypeElement(method);
             Set<TypeMirror> intfacs = utils.getAllInterfaces(typeElement);
+            /*
+             * Search for the method in the list of interfaces. If found check if it is
+             * overridden by any other subinterface method which this class
+             * implements. If it is not overridden, add it in the method list.
+             * Do this recursively for all the extended interfaces for each interface
+             * from the list.
+             */
             for (TypeMirror interfaceType : intfacs) {
-                // TODO: this method also finds static methods which are pseudo-inherited;
-                //  this needs to be fixed
                 ExecutableElement found = utils.findMethod(utils.asTypeElement(interfaceType), method);
-                if (found != null && !methods.contains(found)) {
-                    methods.add(found);
-                    interfaces.put(found, interfaceType);
+                if (found != null) {
+                    removeOverriddenMethod(found);
+                    if (!overridingMethodFound(found)) {
+                        methlist.add(found);
+                        interfaces.put(found, interfaceType);
+                    }
                 }
             }
         }
 
         /**
-         * Returns a collection of interface methods which the method passed in the
+         * Return the list of interface methods which the method passed in the
          * constructor is implementing. The search/build order is as follows:
          * <pre>
          * 1. Search in all the immediate interfaces which this method's class is
          *    implementing. Do it recursively for the superinterfaces as well.
          * 2. Traverse all the superclasses and search recursively in the
          *    interfaces which those superclasses implement.
-         * </pre>
+         *</pre>
          *
-         * @return a collection of implemented methods
+         * @return SortedSet<ExecutableElement> of implemented methods.
          */
-        Collection<ExecutableElement> getImplementedMethods() {
-            return methods;
+        List<ExecutableElement> getImplementedMethods() {
+            return methlist;
         }
 
         TypeMirror getMethodHolder(ExecutableElement ee) {
             return interfaces.get(ee);
         }
+
+        /**
+         * Search in the method list and check if it contains a method which
+         * is overridden by the method as parameter.  If found, remove the
+         * overridden method from the method list.
+         *
+         * @param method Is this method overriding a method in the method list.
+         */
+        private void removeOverriddenMethod(ExecutableElement method) {
+            TypeElement overriddenClass = utils.overriddenClass(method);
+            if (overriddenClass != null) {
+                for (int i = 0; i < methlist.size(); i++) {
+                    TypeElement te = utils.getEnclosingTypeElement(methlist.get(i));
+                    if (te == overriddenClass || utils.isSubclassOf(overriddenClass, te)) {
+                        methlist.remove(i);  // remove overridden method
+                        return;
+                    }
+                }
+            }
+        }
+
+        /**
+         * Search in the already found methods' list and check if it contains
+         * a method which is overriding the method parameter or is the method
+         * parameter itself.
+         *
+         * @param method method to be searched
+         */
+        private boolean overridingMethodFound(ExecutableElement method) {
+            TypeElement containingClass = utils.getEnclosingTypeElement(method);
+            for (ExecutableElement listmethod : methlist) {
+                if (containingClass == utils.getEnclosingTypeElement(listmethod)) {
+                    // it's the same method.
+                    return true;
+                }
+                TypeElement te = utils.overriddenClass(listmethod);
+                if (te == null) {
+                    continue;
+                }
+                if (te == containingClass || utils.isSubclassOf(te, containingClass)) {
+                    return true;
+                }
+            }
+            return false;
+        }
     }
 
-    private record OverriddenMethodInfo(ExecutableElement overriddenMethod,
-                                        boolean simpleOverride) {
+    /**
+     * A simple container to encapsulate an overridden method
+     * and the type of override.
+     */
+    static class OverriddenMethodInfo {
+        final ExecutableElement overridden;
+        final boolean simpleOverride;
+
+        public OverriddenMethodInfo(ExecutableElement overridden, boolean simpleOverride) {
+            this.overridden = overridden;
+            this.simpleOverride = simpleOverride;
+        }
+
+        @Override
+        public String toString() {
+            return "OverriddenMethodInfo[" + overridden + ",simple:" + simpleOverride + "]";
+        }
     }
 }
