@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -185,8 +185,8 @@ public class ElementsTable {
     private Set<ModulePackage> excludePackages = new LinkedHashSet<>();
     private Set<ModulePackage> subPackages = new LinkedHashSet<>();
 
-    private List<JCClassDecl> classDecList = List.of();
-    private List<String> classArgList = List.of();
+    private List<JCClassDecl> classDecList = Collections.emptyList();
+    private List<String> classArgList = Collections.emptyList();
     private com.sun.tools.javac.util.List<JCCompilationUnit> classTreeList = null;
 
     private final Set<JavaFileObject.Kind> sourceKinds = EnumSet.of(JavaFileObject.Kind.SOURCE);
@@ -239,10 +239,12 @@ public class ElementsTable {
      * @return the module documentation level mode
      */
     public ModuleMode getModuleMode() {
-        return switch (accessFilter.getAccessValue(ElementKind.MODULE)) {
-            case PACKAGE, PRIVATE -> ModuleMode.ALL;
-            default -> ModuleMode.API;
-        };
+        switch(accessFilter.getAccessValue(ElementKind.MODULE)) {
+            case PACKAGE: case PRIVATE:
+                return DocletEnvironment.ModuleMode.ALL;
+            default:
+                return DocletEnvironment.ModuleMode.API;
+        }
     }
 
     private Set<Element> specifiedElements = null;
@@ -270,7 +272,7 @@ public class ElementsTable {
      * A module is fully included,
      *   - is specified on the command line --module
      *   - is derived from the module graph, that is, by expanding the
-     *     'requires' directive, based on --expand-requires
+     *     requires directive, based on --expand-requires
      *
      * A module is included if an enclosed package or type is
      * specified on the command line.
@@ -483,10 +485,10 @@ public class ElementsTable {
 
     /**
      * Returns the aggregate set of included packages and specified
-     * subpackages.
+     * sub packages.
      *
      * @return the aggregate set of included packages and specified
-     * subpackages
+     * sub packages
      */
     Iterable<ModulePackage> getPackagesToParse() throws IOException {
         List<ModulePackage> result = new ArrayList<>();
@@ -651,7 +653,7 @@ public class ElementsTable {
                 String binaryName = fm.inferBinaryName(msymloc, fo);
                 String pn = getPackageName(binaryName);
                 PackageSymbol psym = syms.enterPackage(msym, names.fromString(pn));
-                result.add(psym);
+                result.add((PackageElement) psym);
             }
         }
         return result;
@@ -791,7 +793,7 @@ public class ElementsTable {
             Collection<ModulePackage> collection,
             boolean recurse) throws ToolException {
         for (ModulePackage modpkg : collection) {
-            toolEnv.printInfo("main.Loading_source_files_for_package", modpkg.toString());
+            toolEnv.notice("main.Loading_source_files_for_package", modpkg.toString());
             List<JavaFileObject> files = getFiles(modpkg, recurse);
             if (files.isEmpty()) {
                 String text = log.getText("main.no_source_files_for_package",
@@ -806,7 +808,7 @@ public class ElementsTable {
     /**
      * Returns an aggregated list of java file objects from the items
      * specified on the command line. The packages specified should not
-     * recurse, however subpackages should recurse into the subdirectories.
+     * recurse, however sub-packages should recurse into the sub directories.
      * @return a list of java file objects
      * @throws IOException if an error occurs
      */
@@ -835,7 +837,7 @@ public class ElementsTable {
         ListBuffer<JavaFileObject> lb = new ListBuffer<>();
         List<Location> locs = getLocation(modpkg);
         if (locs.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         String pname = modpkg.packageName;
         for (Location packageLocn : locs) {
@@ -863,7 +865,7 @@ public class ElementsTable {
 
     private List<Location> getLocation(ModulePackage modpkg) throws ToolException {
         if (locations.size() == 1 && !locations.contains(StandardLocation.MODULE_SOURCE_PATH)) {
-            return List.of(locations.get(0));
+            return Collections.singletonList(locations.get(0));
         }
 
         if (modpkg.hasModule()) {
@@ -872,7 +874,7 @@ public class ElementsTable {
         // TODO: handle invalid results better.
         ModuleSymbol msym = findModuleOfPackageName(modpkg.packageName);
         if (msym == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         return getModuleLocation(locations, msym.name.toString());
     }
@@ -991,7 +993,7 @@ public class ElementsTable {
             return false;
         }
         if (visibleElementVisitor == null) {
-            visibleElementVisitor = new SimpleElementVisitor14<>() {
+            visibleElementVisitor = new SimpleElementVisitor14<Boolean, Void>() {
                 @Override
                 public Boolean visitType(TypeElement e, Void p) {
                     if (!accessFilter.checkModifier(e)) {
@@ -1059,11 +1061,14 @@ public class ElementsTable {
                 }
                 Element enclosing = e.getEnclosingElement();
                 if (enclosing != null) {
-                    return switch (enclosing.getKind()) {
-                        case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE -> visit(enclosing);
-                        case PACKAGE -> specifiedPackageElements.contains((PackageElement) enclosing);
-                        default -> throw new AssertionError("unknown element: " + enclosing);
-                    };
+                    switch(enclosing.getKind()) {
+                        case PACKAGE:
+                            return specifiedPackageElements.contains((PackageElement)enclosing);
+                        case CLASS: case INTERFACE: case ENUM: case ANNOTATION_TYPE:
+                            return visit((TypeElement) enclosing);
+                        default:
+                            throw new AssertionError("unknown element: " + enclosing);
+                    }
                 }
             }
             return false;
@@ -1075,14 +1080,14 @@ public class ElementsTable {
             if (includedCache.contains(e))
                 return true;
             if (visit(e.getEnclosingElement()) && isSelected(e)) {
-                switch (e.getKind()) {
-                    case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE,
-                            MODULE, OTHER, PACKAGE -> throw new AssertionError("invalid element for this operation: " + e);
-                    default -> {
+                switch(e.getKind()) {
+                    case ANNOTATION_TYPE: case CLASS: case ENUM: case INTERFACE:
+                    case MODULE: case OTHER: case PACKAGE:
+                        throw new AssertionError("invalid element for this operation: " + e);
+                    default:
                         // the only allowed kinds in the cache are "members"
                         includedCache.add(e);
                         return true;
-                    }
                 }
             }
             return false;
@@ -1203,25 +1208,40 @@ public class ElementsTable {
 
             AccessKind accessValue = null;
             for (ElementKind kind : ALLOWED_KINDS) {
-                accessValue = switch (kind) {
-                    case METHOD  -> options.showMembersAccess();
-                    case CLASS   -> options.showTypesAccess();
-                    case PACKAGE -> options.showPackagesAccess();
-                    case MODULE  -> options.showModuleContents();
-                    default -> throw new AssertionError("unknown element: " + kind);
-                };
+                switch (kind) {
+                    case METHOD:
+                        accessValue  = options.showMembersAccess();
+                        break;
+                    case CLASS:
+                        accessValue  = options.showTypesAccess();
+                        break;
+                    case PACKAGE:
+                        accessValue  = options.showPackagesAccess();
+                        break;
+                    case MODULE:
+                        accessValue  = options.showModuleContents();
+                        break;
+                    default:
+                        throw new AssertionError("unknown element: " + kind);
+
+                }
                 accessMap.put(kind, accessValue);
                 filterMap.put(kind, getFilterSet(accessValue));
             }
         }
 
         static EnumSet<AccessKind> getFilterSet(AccessKind accessValue) {
-            return switch (accessValue) {
-                case PUBLIC    -> EnumSet.of(AccessKind.PUBLIC);
-                case PROTECTED -> EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED);
-                case PACKAGE   -> EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED, AccessKind.PACKAGE);
-                case PRIVATE   -> EnumSet.allOf(AccessKind.class);
-            };
+            switch (accessValue) {
+                case PUBLIC:
+                    return EnumSet.of(AccessKind.PUBLIC);
+                case PROTECTED:
+                default:
+                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED);
+                case PACKAGE:
+                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED, AccessKind.PACKAGE);
+                case PRIVATE:
+                    return EnumSet.allOf(AccessKind.class);
+            }
         }
 
         public AccessKind getAccessValue(ElementKind kind) {
@@ -1253,13 +1273,19 @@ public class ElementsTable {
 
         // convert a requested element kind to an allowed access kind
         private ElementKind getAllowedKind(ElementKind kind) {
-            return switch (kind) {
-                case CLASS, METHOD, MODULE, PACKAGE -> kind;
-                case RECORD, ANNOTATION_TYPE, ENUM, INTERFACE -> ElementKind.CLASS;
-                case CONSTRUCTOR, ENUM_CONSTANT, EXCEPTION_PARAMETER, FIELD, INSTANCE_INIT, LOCAL_VARIABLE,
-                        PARAMETER, RESOURCE_VARIABLE, STATIC_INIT, TYPE_PARAMETER, RECORD_COMPONENT -> ElementKind.METHOD;
-                default -> throw new AssertionError("unsupported kind: " + kind);
-            };
+            switch (kind) {
+                case CLASS: case METHOD: case MODULE: case PACKAGE:
+                    return kind;
+                case RECORD: case ANNOTATION_TYPE: case ENUM: case INTERFACE:
+                    return ElementKind.CLASS;
+                case CONSTRUCTOR: case ENUM_CONSTANT: case EXCEPTION_PARAMETER:
+                case FIELD: case INSTANCE_INIT: case LOCAL_VARIABLE: case PARAMETER:
+                case RESOURCE_VARIABLE: case STATIC_INIT: case TYPE_PARAMETER:
+                case RECORD_COMPONENT:
+                    return ElementKind.METHOD;
+                default:
+                    throw new AssertionError("unsupported kind: " + kind);
+            }
         }
     } // end ModifierFilter
 }
