@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,8 +30,6 @@ import java.util.stream.*;
  * @test
  * @bug 8242263
  * @summary Exercise DiagnoseSyncOnValueBasedClasses diagnostic flag
- * @requires vm.flagless
- * @requires vm.flavor != "zero"
  * @library /test/lib
  * @run driver/timeout=180000 SyncOnValueBasedClassTest
  */
@@ -44,9 +42,13 @@ public class SyncOnValueBasedClassTest {
     static List<Object> testObjects = new ArrayList<Object>();
 
     private static final String[] specificFlags[] = {
-        {"-Xint"},
-        {"-Xcomp", "-XX:TieredStopAtLevel=1"},
-        {"-Xcomp", "-XX:-TieredCompilation"},
+        {"-Xint", "-XX:+UseBiasedLocking"},
+        {"-Xint", "-XX:-UseBiasedLocking"},
+        {"-Xcomp", "-XX:TieredStopAtLevel=1", "-XX:+UseBiasedLocking"},
+        {"-Xcomp", "-XX:TieredStopAtLevel=1", "-XX:-UseBiasedLocking"},
+        {"-Xcomp", "-XX:-TieredCompilation", "-XX:-UseBiasedLocking"},
+        {"-Xcomp", "-XX:-TieredCompilation", "-XX:+UseBiasedLocking", "-XX:+UseOptoBiasInlining"},
+        {"-Xcomp", "-XX:-TieredCompilation", "-XX:+UseBiasedLocking", "-XX:-UseOptoBiasInlining"}
     };
 
     private static void initTestObjects() {
