@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,13 +24,13 @@
 
 /*
  * @test
- * @enablePreview
  * @run testng TestTypeAccess
  */
 
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.ValueLayout;
+import jdk.incubator.foreign.MemoryHandles;
+import jdk.incubator.foreign.MemorySegment;
+import jdk.incubator.foreign.MemoryLayouts;
+import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.*;
 
 import java.lang.invoke.VarHandle;
@@ -38,47 +38,54 @@ import java.lang.invoke.WrongMethodTypeException;
 
 public class TestTypeAccess {
 
-    static final VarHandle INT_HANDLE = ValueLayout.JAVA_INT.varHandle();
-    static final VarHandle ADDR_HANDLE = ValueLayout.ADDRESS.varHandle();
+    static final VarHandle INT_HANDLE = MemoryLayouts.JAVA_INT.varHandle(int.class);
+
+    static final VarHandle ADDR_HANDLE = MemoryHandles.asAddressVarHandle(INT_HANDLE);
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressCoordinateAsString() {
-        int v = (int)INT_HANDLE.get("string");
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
+            int v = (int)INT_HANDLE.get("string");
+        }
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryCoordinatePrimitive() {
-        int v = (int)INT_HANDLE.get(1);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
+            int v = (int)INT_HANDLE.get(1);
+        }
     }
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressValueGetAsString() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
             String address = (String)ADDR_HANDLE.get(s.address());
         }
     }
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressValueSetAsString() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
             ADDR_HANDLE.set(s.address(), "string");
         }
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryAddressValueGetAsPrimitive() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
             int address = (int)ADDR_HANDLE.get(s.address());
         }
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryAddressValueSetAsPrimitive() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, scope);
             ADDR_HANDLE.set(s.address(), 1);
         }
     }
