@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,9 +23,9 @@
 
 /*
  * @test
- * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @library /test/lib
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
  * @build ThrowingUpcall TestUpcallException
  *
  * @run testng/othervm/native
@@ -33,6 +33,9 @@
  *   TestUpcallException
  */
 
+import jdk.incubator.foreign.CLinker;
+import jdk.incubator.foreign.FunctionDescriptor;
+import jdk.incubator.foreign.ResourceScope;
 import jdk.test.lib.Utils;
 import org.testng.annotations.Test;
 
@@ -51,17 +54,17 @@ public class TestUpcallException {
 
     @Test
     public void testExceptionInterpreted() throws InterruptedException, IOException {
-        run(/* useSpec = */ false, /* isVoid = */ true);
-        run(/* useSpec = */ false, /* isVoid = */ false);
+        boolean useSpec = false;
+        run(useSpec);
     }
 
     @Test
     public void testExceptionSpecialized() throws IOException, InterruptedException {
-        run(/* useSpec = */ true, /* isVoid = */ true);
-        run(/* useSpec = */ true, /* isVoid = */ false);
+        boolean useSpec = true;
+        run(useSpec);
     }
 
-    private void run(boolean useSpec, boolean isVoid) throws IOException, InterruptedException {
+    private void run(boolean useSpec) throws IOException, InterruptedException {
         Process process = new ProcessBuilder()
             .command(
                 Paths.get(Utils.TEST_JDK)
@@ -69,13 +72,12 @@ public class TestUpcallException {
                      .resolve("java")
                      .toAbsolutePath()
                      .toString(),
-                "--enable-preview",
+                "--add-modules", "jdk.incubator.foreign",
                 "--enable-native-access=ALL-UNNAMED",
                 "-Djava.library.path=" + System.getProperty("java.library.path"),
                 "-Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=" + useSpec,
                 "-cp", Utils.TEST_CLASS_PATH,
-                "ThrowingUpcall",
-                isVoid ? "void" : "non-void")
+                "ThrowingUpcall")
             .start();
 
         int result = process.waitFor();
