@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,17 +24,16 @@
 
 /*
  * @test
- * @enablePreview
  * @run testng TestVarHandleCombinators
  */
 
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.ValueLayout;
-
+import jdk.incubator.foreign.MemoryHandles;
+import jdk.incubator.foreign.ResourceScope;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-import java.lang.foreign.MemorySegment;
-import java.lang.invoke.MethodHandles;
+import jdk.incubator.foreign.MemorySegment;
+
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 
@@ -44,16 +43,16 @@ public class TestVarHandleCombinators {
 
     @Test
     public void testElementAccess() {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_BYTE);
+        VarHandle vh = MemoryHandles.varHandle(byte.class, ByteOrder.nativeOrder());
 
         byte[] arr = { 0, 0, -1, 0 };
         MemorySegment segment = MemorySegment.ofArray(arr);
         assertEquals((byte) vh.get(segment, 2), (byte) -1);
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
+    @Test(expectedExceptions = IllegalStateException.class)
     public void testUnalignedElement() {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_BYTE.withBitAlignment(32));
+        VarHandle vh = MemoryHandles.varHandle(byte.class, 4, ByteOrder.nativeOrder());
         MemorySegment segment = MemorySegment.ofArray(new byte[4]);
         vh.get(segment, 2L); //should throw
         //FIXME: the VH only checks the alignment of the segment, which is fine if the VH is derived from layouts,
@@ -61,19 +60,28 @@ public class TestVarHandleCombinators {
         //FIXME: at least until the VM is fixed
     }
 
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    public void testAlignNotPowerOf2() {
+        VarHandle vh = MemoryHandles.varHandle(byte.class, 3, ByteOrder.nativeOrder());
+    }
+
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    public void testAlignNegative() {
+        VarHandle vh = MemoryHandles.varHandle(byte.class, -1, ByteOrder.nativeOrder());
+    }
+
     @Test
     public void testAlign() {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_BYTE.withBitAlignment(16));
+        VarHandle vh = MemoryHandles.varHandle(byte.class, 2, ByteOrder.nativeOrder());
 
-        MemorySegment segment = MemorySegment.allocateNative(1, 2, MemorySession.openImplicit());
+        MemorySegment segment = MemorySegment.allocateNative(1, 2, ResourceScope.newImplicitScope());
         vh.set(segment, 0L, (byte) 10); // fine, memory region is aligned
         assertEquals((byte) vh.get(segment, 0L), (byte) 10);
     }
 
     @Test
     public void testByteOrderLE() {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_SHORT
-                .withOrder(ByteOrder.LITTLE_ENDIAN).withBitAlignment(8));
+        VarHandle vh = MemoryHandles.varHandle(short.class, 2, ByteOrder.LITTLE_ENDIAN);
         byte[] arr = new byte[2];
         MemorySegment segment = MemorySegment.ofArray(arr);
         vh.set(segment, 0L, (short) 0xFF);
@@ -83,8 +91,7 @@ public class TestVarHandleCombinators {
 
     @Test
     public void testByteOrderBE() {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_SHORT
-                .withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8));
+        VarHandle vh = MemoryHandles.varHandle(short.class, 2, ByteOrder.BIG_ENDIAN);
         byte[] arr = new byte[2];
         MemorySegment segment = MemorySegment.ofArray(arr);
         vh.set(segment, 0L, (short) 0xFF);
@@ -99,10 +106,10 @@ public class TestVarHandleCombinators {
 
         //[10 : [5 : [x32 i32]]]
 
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(ValueLayout.JAVA_INT.withBitAlignment(32));
+        VarHandle vh = MemoryHandles.varHandle(int.class, ByteOrder.nativeOrder());
         int count = 0;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(inner_size * outer_size * 8, 4, session);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(inner_size * outer_size * 8, 4, scope);
             for (long i = 0; i < outer_size; i++) {
                 for (long j = 0; j < inner_size; j++) {
                     vh.set(segment, i * 40 + j * 8, count);
@@ -114,4 +121,21 @@ public class TestVarHandleCombinators {
             }
         }
     }
+
+    @Test(dataProvider = "badCarriers", expectedExceptions = IllegalArgumentException.class)
+    public void testBadCarrier(Class<?> carrier) {
+        MemoryHandles.varHandle(carrier, ByteOrder.nativeOrder());
+    }
+
+    @DataProvider(name = "badCarriers")
+    public Object[][] createBadCarriers() {
+        return new Object[][] {
+                { void.class },
+                { boolean.class },
+                { Object.class },
+                { int[].class },
+                { MemorySegment.class }
+        };
+    }
+
 }
