@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,49 +23,35 @@
 
 package org.openjdk.foreigntest;
 
-import java.lang.foreign.*;
+import jdk.incubator.foreign.*;
+import org.testng.annotations.Test;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.Method;
 
 public class PanamaMainUnnamedModule {
-
-    static {
-        System.loadLibrary("LinkerInvokerUnnamed");
-    }
-
-    public static void main(String[] args) throws Throwable {
-        testReflection();
-        testSetAccessible();
-        testInvoke();
-        testDirectAccess();
-        testJNIAccess();
-    }
-
-   public static void testReflection() throws Throwable {
-       Method method = Linker.class.getDeclaredMethod("nativeLinker");
+   @Test
+   public void testReflection() throws Throwable {
+       Method method = CLinker.class.getDeclaredMethod("getInstance");
        method.invoke(null);
    }
 
-   public static void testSetAccessible() throws Throwable {
-       Method method = Linker.class.getDeclaredMethod("nativeLinker");
+   @Test
+   public void testSetAccessible() throws Throwable {
+       Method method = CLinker.class.getDeclaredMethod("getInstance");
        method.setAccessible(true);
        method.invoke(null);
    }
 
-   public static void testInvoke() throws Throwable {
-       var mh = MethodHandles.lookup().findStatic(Linker.class, "nativeLinker",
-           MethodType.methodType(Linker.class));
-       var linker = (Linker)mh.invokeExact();
+   @Test
+   public void testInvoke() throws Throwable {
+       var mh = MethodHandles.lookup().findStatic(CLinker.class, "getInstance",
+           MethodType.methodType(CLinker.class));
+       var linker = (CLinker)mh.invokeExact();
    }
 
-   public static void testDirectAccess() {
-       Linker.nativeLinker();
+   @Test
+   public void testDirectAccess() throws Throwable {
+       CLinker.getInstance();
    }
-
-   public static void testJNIAccess() {
-        nativeLinker0();
-    }
-
-    static native void nativeLinker0();
 }
