@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -141,32 +141,32 @@ public class DefaultControlTest {
 
     private static void testGetCandidateLocales() {
         Map<Locale, Locale[]> candidateData = new HashMap<Locale, Locale[]>();
-        candidateData.put(Locale.of("ja", "JP", "YOK"), new Locale[] {
-                              Locale.of("ja", "JP", "YOK"),
-                              Locale.of("ja", "JP"),
-                              Locale.of("ja"),
+        candidateData.put(new Locale("ja", "JP", "YOK"), new Locale[] {
+                              new Locale("ja", "JP", "YOK"),
+                              new Locale("ja", "JP"),
+                              new Locale("ja"),
                               Locale.ROOT });
-        candidateData.put(Locale.of("ja", "JP"), new Locale[] {
-                              Locale.of("ja", "JP"),
-                              Locale.of("ja"),
+        candidateData.put(new Locale("ja", "JP"), new Locale[] {
+                              new Locale("ja", "JP"),
+                              new Locale("ja"),
                               Locale.ROOT });
-        candidateData.put(Locale.of("ja"), new Locale[] {
-                              Locale.of("ja"),
+        candidateData.put(new Locale("ja"), new Locale[] {
+                              new Locale("ja"),
                               Locale.ROOT });
 
-        candidateData.put(Locale.of("ja", "", "YOK"), new Locale[] {
-                              Locale.of("ja", "", "YOK"),
-                              Locale.of("ja"),
+        candidateData.put(new Locale("ja", "", "YOK"), new Locale[] {
+                              new Locale("ja", "", "YOK"),
+                              new Locale("ja"),
                               Locale.ROOT });
-        candidateData.put(Locale.of("", "JP", "YOK"), new Locale[] {
-                              Locale.of("", "JP", "YOK"),
-                              Locale.of("", "JP"),
+        candidateData.put(new Locale("", "JP", "YOK"), new Locale[] {
+                              new Locale("", "JP", "YOK"),
+                              new Locale("", "JP"),
                               Locale.ROOT });
-        candidateData.put(Locale.of("", "", "YOK"), new Locale[] {
-                              Locale.of("", "", "YOK"),
+        candidateData.put(new Locale("", "", "YOK"), new Locale[] {
+                              new Locale("", "", "YOK"),
                               Locale.ROOT });
-        candidateData.put(Locale.of("", "JP"), new Locale[] {
-                              Locale.of("", "JP"),
+        candidateData.put(new Locale("", "JP"), new Locale[] {
+                              new Locale("", "JP"),
                               Locale.ROOT });
         candidateData.put(Locale.ROOT, new Locale[] {
                               Locale.ROOT });
@@ -354,19 +354,19 @@ public class DefaultControlTest {
     private static void testToBundleName() {
         final String name = "J2SE";
         Map<Locale, String> bundleNames = new HashMap<Locale, String>();
-        bundleNames.put(Locale.of("ja", "JP", "YOK"),
+        bundleNames.put(new Locale("ja", "JP", "YOK"),
                         name + "_" + "ja" + "_" + "JP" + "_" + "YOK");
-        bundleNames.put(Locale.of("ja", "JP"),
+        bundleNames.put(new Locale("ja", "JP"),
                         name + "_" + "ja" + "_" + "JP");
-        bundleNames.put(Locale.of("ja"),
+        bundleNames.put(new Locale("ja"),
                         name + "_" + "ja");
-        bundleNames.put(Locale.of("ja", "", "YOK"),
+        bundleNames.put(new Locale("ja", "", "YOK"),
                         name + "_" + "ja" + "_" + "" + "_" + "YOK");
-        bundleNames.put(Locale.of("", "JP", "YOK"),
+        bundleNames.put(new Locale("", "JP", "YOK"),
                         name + "_" + "" + "_" + "JP" + "_" + "YOK");
-        bundleNames.put(Locale.of("", "", "YOK"),
+        bundleNames.put(new Locale("", "", "YOK"),
                         name + "_" + "" + "_" + "" + "_" + "YOK");
-        bundleNames.put(Locale.of("", "JP"),
+        bundleNames.put(new Locale("", "JP"),
                         name + "_" + "" + "_" + "JP");
         bundleNames.put(Locale.ROOT,
                         name);
