@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -44,12 +44,6 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
-/*
- * @test
- * @modules jdk.jpackage
- * @compile --patch-module jdk.jpackage=${test.src} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED OverridableResourceTest.java
- * @run junit/othervm --patch-module jdk.jpackage=${test.classes} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED jdk.jpackage.internal.OverridableResourceTest
- */
 public class OverridableResourceTest {
 
     @Rule
@@ -142,16 +136,16 @@ public class OverridableResourceTest {
     }
 
     private void testCustomtWithSubstitution(String defaultName) throws IOException {
-        final List<String> resourceData = List.of("A", "[BB]", "C", "Foo", "Foo",
-                "GoodbyeHello", "_B");
+        final List<String> resourceData = List.of("A", "[BB]", "C", "Foo",
+                "GoodbyeHello");
         final Path customFile = createCustomFile("foo", resourceData);
 
         final Map<String, String> substitutionData = new HashMap(Map.of("B",
-                "Bar", "Foo", "B", "_B", "JJ"));
+                "Bar", "Foo", "B"));
         substitutionData.put("Hello", null);
 
         final List<String> expectedResourceData = List.of("A", "[BarBar]", "C",
-                "Bar", "Bar", "Goodbye", "JJ");
+                "B", "Goodbye");
 
         final List<String> actualResourceData = convertToStringList(saveToFile(
                 new OverridableResource(defaultName)
